Updated z-indexing to hopefully fix the select box jumping issue.

--- a/Website/frontend/assets/css/_sass/partials/_enrollment.scss
+++ b/Website/frontend/assets/css/_sass/partials/_enrollment.scss
@@ -687,6 +687,7 @@ $enrollment-module-vertical-padding: 20px;
     left: 0;
     right: 0;
     height: auto;
+    background: url(../i/white-alpha-90.png) repeat;
     background: rgba(255, 255, 255, 0.7);
     z-index: 10000;
     display: none;
