--- a/Website/frontend/assets/css/_sass/partials/_forms.scss
+++ b/Website/frontend/assets/css/_sass/partials/_forms.scss
@@ -491,7 +491,7 @@ form,
     position: absolute;
     background: #fff;
     min-width: 215px;
-    z-index: 10000;
+    z-index: 8000;
 
     li {
         list-style-type: none;
