--- a/Website/frontend/assets/css/_sass/partials/_ui.scss
+++ b/Website/frontend/assets/css/_sass/partials/_ui.scss
@@ -50,7 +50,7 @@ div.tabbable {
 	right: 0;
 	bottom: 0;
 	left: 0;
-	z-index: 1040;
+	z-index: 9900;
 	background-color: #000000;
 }
 
@@ -70,7 +70,7 @@ div.tabbable {
 	position: fixed;
 	top: 10%;
 	left: 50%;
-	z-index: 1050;
+	z-index: 10000;
 	width: 560px;
 	margin-left: -280px;
 	background-color: #ffffff;
